--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="style.css"/>
-    <title>Quintaanaaaa</title>
+    <title>Tienda Tecnologica</title>
   </head>
   <body style="background-color: blueviolet">
     <noscript>You need to enable JavaScript to run this app.</noscript>
